ai destekleri ve çeşitleri arttırıldı
comsumption update - readme updates

ai recom dev - daily consumption dev - sonarqube fixs

ai recom