@@ -5,7 +5,6 @@ import com.mealapp.domain.recipe.entity.Recipe;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Domain Entity nesneleri ile API DTO nesneleri arasındaki dönüşümleri yönetir.
@@ -20,12 +19,16 @@ public class RecommendationMapper {
     public RecommendationResponse toResponse(List<Recipe> recipes) {
         RecommendationResponse response = new RecommendationResponse();
         
-        List<String> titles = recipes.stream()
-                .map(Recipe::getTitle)
-                .collect(Collectors.toList());
+        List<RecommendationResponse.RecipeRecommendationDto> dtos = recipes.stream()
+                .map(recipe -> {
+                    RecommendationResponse.RecipeRecommendationDto dto = new RecommendationResponse.RecipeRecommendationDto();
+                    dto.setRecipeTitle(recipe.getTitle());
+                    dto.setInsight(recipe.getAiInsight() != null ? recipe.getAiInsight() : "Diyetinize ve envanterinize uygun bir seçenek.");
+                    return dto;
+                })
+                .toList();
         
-        response.setRecommendedRecipes(titles);
-        response.setAiInsight("AI önerileri başarıyla oluşturuldu.");
+        response.setRecommendedRecipes(dtos);
         
         return response;
     }
